--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,26 @@
-version: "3.8"
-
 services:
   ui:
-    build: ./ui
     env_file: ".env"
+    build: ./ui
+    environment:
+      - FLASK_APP=app.py
+      # - FLASK_RUN_HOST=0.0.0.0
+      - FLASK_ENV=development
+      - FLASK_RUN_PORT=${UI_PORT}
     ports:
-      - ${UI_PORT}:${UI_PORT}
+      - "${UI_PORT}:${UI_PORT}"
     volumes:
-      - ./ui:/app/ui
+      - ./ui:/app  # mount source code
 
   api:
-    build: ./api
     env_file: ".env"
+    build: ./api
+    environment:
+      - FLASK_APP=app.py
+      # - FLASK_RUN_HOST=0.0.0.0
+      - FLASK_ENV=development
+      - FLASK_RUN_PORT=${API_PORT}
     ports:
-      - ${API_PORT}:${API_PORT}
+      - "${API_PORT}:${API_PORT}"
     volumes:
-      - ./api:/app/api
+      - ./api:/app  # mount source code
