implement synthetic dataset generation api
Squashed commit of the following:

commit 5ae05768966bc05f012efcb06edc58ae8d73f93f
Author: Matt Watson <mwatson@renci.org>
Date:   Sat Feb 1 14:41:33 2025 -0500

    receive generated data from api from from selections

commit 2285f8f04cac1deca0a78a3db4bc54c13c430eed
Author: Matt Watson <mwatson@renci.org>
Date:   Fri Jan 31 21:48:27 2025 -0500

    wire up count select

commit 859c49b2032ea6a5a45626850b6002f5b7cc7edf
Author: Matt Watson <mwatson@renci.org>
Date:   Fri Jan 31 20:35:44 2025 -0500

    get datasets from api, stick in select

commit 26bb838cfa96743c898258c2982a62b3d8ec4f70
Author: Matt Watson <mwatson@renci.org>
Date:   Fri Jan 31 17:46:04 2025 -0500

    wip

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,23 +2,23 @@ FROM python:3.12
 
 WORKDIR /app
 
-# Copy the requirements file into the container
+# copy in requirements file
 COPY requirements.txt .
 
-# Install dependencies using pip
+# install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy your application files into the container
+# copy in application files
 COPY . .
 
-# Expose the necessary port
-EXPOSE ${API_PORT}
+# expose port
+EXPOSE ${UI_PORT}
 
-# Environment variables
+# environment variables
 ENV FLASK_APP=api.py
 ENV FLASK_RUN_HOST=0.0.0.0
 ENV FLASK_RUN_PORT=${API_PORT}
 ENV FLASK_ENV=${API_ENV}
 
-# Start the Flask app
+# go!
 CMD ["python", "-m", "flask", "run"]
