--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,20 +4,19 @@ services:
     build: ./ui
     environment:
       - FLASK_APP=app.py
-      # - FLASK_RUN_HOST=0.0.0.0
       - FLASK_ENV=development
       - FLASK_RUN_PORT=${UI_PORT}
     ports:
       - "${UI_PORT}:${UI_PORT}"
     volumes:
       - ./ui:/app  # mount source code
+    restart: on-failure
 
   api:
     env_file: ".env"
     build: ./api
     environment:
       - FLASK_APP=app.py
-      # - FLASK_RUN_HOST=0.0.0.0
       - FLASK_ENV=development
       - FLASK_RUN_PORT=${API_PORT}
     ports:
