generate synthetic data based on csv with 'real' data
add field to 'real' data

add dep, new data, fix requests

fit data grid in main

bring back loading

shrink navbar

split generators into own file

align table and app theme

move callback

style form

organize dataset selection options

simplify dataset list endpoint

group datasets

update real data

upper form labels

fix gen button conditional logic

align ag styles with dmc

set default count

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -12,13 +12,13 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # expose port
-EXPOSE ${UI_PORT}
+EXPOSE ${API_PORT}
 
 # environment variables
 ENV FLASK_APP=api.py
 ENV FLASK_RUN_HOST=0.0.0.0
-ENV FLASK_RUN_PORT=${API_PORT}
+ENV FLASK_RUN_PORT=5000
 ENV FLASK_ENV=${API_ENV}
 
 # go!
-CMD ["python", "-m", "flask", "run"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=5000", "--debug"]
