--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,6 @@ services:
       - FLASK_ENV=development
       - FLASK_RUN_PORT=${API_PORT}
     ports:
-      - "${API_PORT}:${API_PORT}"
+      - "${API_PORT}:5000"
     volumes:
       - ./api:/app  # mount source code
