--- a/ui/requirements.txt
+++ b/ui/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.12.14; python_version >= '3.6'
 charset-normalizer==3.4.1; python_version >= '3.7'
 click==8.1.8; python_version >= '3.7'
 dash==2.18.2; python_version >= '3.8'
+dash_ag_grid==31.3.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-iconify==0.1.2
